@@ -86,6 +86,9 @@
    - markus@cvs.openbsd.org 2001/06/27 04:48:53
      [auth.c match.c sshd.8]
      tridge@samba.org
+   - markus@cvs.openbsd.org 2001/06/27 05:35:42
+     [ssh-keygen.c]
+     use cyberflex_inq_class to inquire class.
  
 20010629
  - (bal) Removed net_aton() since we don't use it any more
